[package]
name = "lapce-plugin"
version = "0.1.0"
license = "Apache-2.0"
description = "rust libary for Lapce plugin"
edition = "2021"

[dependencies]
bytes = "1.0"
http = "0.2"
wasi-experimental-http = { git = "https://github.com/lapce/wasi-experimental-http" }
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-lite = "0.5"
thiserror = "1.0"
anyhow = "1.0"

[dependencies.psp-types]
git = "https://github.com/lapce/psp-types"
branch = "master"
