[package]
name = "lapce-plugin"
version = "0.1.1"
license = "Apache-2.0"
description = "rust libary for Lapce plugin"
edition = "2021"

[dependencies]
bytes = "1.0"
http = "0.2"
lapce-wasi-experimental-http = "0.10.0"
once_cell = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonrpc-lite = "0.5"
thiserror = "1.0"
anyhow = "1.0"
psp-types = "0.1.1"
